--- a/Windows/Dockerfile.windows1809
+++ b/Windows/Dockerfile.windows1809
@@ -2,13 +2,7 @@
 FROM mcr.microsoft.com/windows/nanoserver:1809-amd64
 
 # Set working directory
-WORKDIR C:\app
-
-# Copy application files
-COPY . .
+WORKDIR C:/app
 
 # Expose port
-EXPOSE 3000
-
-# Run your application
-CMD ["your-app.exe"]
+EXPOSE 4444
